--- a/index_plus.html
+++ b/index_plus.html
@@ -5,9 +5,10 @@
         <title>Западная малая ушастая сова</title>
 </head>
 <body>
-<h1>Западная малая ушастая сова</h1>
+<h1>Виды сов!!!</h1>
+        <h2>Западная малая ушастая сова</h2>
 <img 
 src="https://4tololo.ru/files/images/20152002193938.jpg"
 alt="Западная малая ушастая сова"
-title="Западная малая ушастая сова" width="300" height="300">
+title="Западная малая ушастая сова" width="500" height="500">
 </body>   
