--- a/index_plus.html
+++ b/index_plus.html
@@ -5,10 +5,15 @@
         <title>Западная малая ушастая сова</title>
 </head>
 <body>
-<h1>Виды сов!!!</h1>
+        <h1><u>Виды сов!!!</u></h1>
         <h2>Западная малая ушастая сова</h2>
 <img 
 src="https://4tololo.ru/files/images/20152002193938.jpg"
 alt="Западная малая ушастая сова"
 title="Западная малая ушастая сова" width="500" height="500">
+        <h2>Сова Сипуха</h2>
+<img
+src="https://4tololo.ru/files/styles/large/public/images/20152002193941.jpg?itok=VJZI1atE"
+alt="Сова Сипуха"
+title="Сова Сипуха">     
 </body>   
