--- a/index_plus.html
+++ b/index_plus.html
@@ -11,9 +11,15 @@
 src="https://4tololo.ru/files/images/20152002193938.jpg"
 alt="Западная малая ушастая сова"
 title="Западная малая ушастая сова" width="500" height="500">
+<p>Среда обитания: от Юго-Восточной Аляски до западной Канады и от западной части США до центральной Мексики
+
+Эти совы целенаправленно приносят маленьких слепых змей, похожих на больших земляных червей, в гнездо, чтобы они защищали его от насекомых. Так как обычно добыча сов это мертвые грызуны, то запах их тел может привлекать в гнездо большое количество насекомых, которыми и питаются змеи.</p>        
         <h2>Сова Сипуха</h2>
 <img
 src="https://4tololo.ru/files/styles/large/public/images/20152002193941.jpg?itok=VJZI1atE"
 alt="Сова Сипуха"
-title="Сова Сипуха">     
+title="Сова Сипуха">
+<p>Среда обитания: все континенты кроме Антарктиды
+
+Созвездие пятен на голове сипух, это не просто украшение. Считается, что чем больше у неё пятен, тем больше она устойчивей к паразитам и тем привлекательнее она для самцов.</p>        
 </body>   
