--- a/index_plus.html
+++ b/index_plus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <meta charset="UTF-8">
-        <title>Западная малая ушастая сова</title>
+        <title><b>Совы!</b></title>
 </head>
 <body>
         <h1><u>Виды сов!!!</u></h1>
