--- a/index_plus.html
+++ b/index_plus.html
@@ -13,7 +13,8 @@ alt="Западная малая ушастая сова"
 title="Западная малая ушастая сова" width="500" height="500">
 <p>Среда обитания: от Юго-Восточной Аляски до западной Канады и от западной части США до центральной Мексики
 
-Эти совы целенаправленно приносят маленьких слепых змей, похожих на больших земляных червей, в гнездо, чтобы они защищали его от насекомых. Так как обычно добыча сов это мертвые грызуны, то запах их тел может привлекать в гнездо большое количество насекомых, которыми и питаются змеи.</p>        
+Эти совы целенаправленно приносят маленьких слепых змей, похожих на больших земляных червей, в гнездо, чтобы они защищали его от насекомых. 
+Так как обычно добыча сов это мертвые грызуны, то запах их тел может привлекать в гнездо большое количество насекомых, которыми и питаются змеи.</p>        
         <h2>Сова Сипуха</h2>
 <img
 src="https://4tololo.ru/files/styles/large/public/images/20152002193941.jpg?itok=VJZI1atE"
@@ -21,5 +22,24 @@ alt="Сова Сипуха"
 title="Сова Сипуха">
 <p>Среда обитания: все континенты кроме Антарктиды
 
-Созвездие пятен на голове сипух, это не просто украшение. Считается, что чем больше у неё пятен, тем больше она устойчивей к паразитам и тем привлекательнее она для самцов.</p>        
-</body>   
+Созвездие пятен на голове сипух, это не просто украшение. 
+Считается, что чем больше у неё пятен, тем больше она устойчивей к паразитам и тем привлекательнее она для самцов.</p>        
+        <h2>Кроличий сыч</h2>
+<img
+src="https://4tololo.ru/files/images/20152002193943.jpg"     
+alt="Кроличий сыч"
+title="Кроличий сыч">
+<p>Среда обитания: на открытых ландшафтах Северной и Южной Америки
+
+Как вы могли догадаться, эти совы живут в норах под землей, которые раньше принадлежали мелким млекопитающим, таким как суслики и луговые собачки. 
+В отличие от других, эти роющие совы активны в течение дня, особенно весной, когда им необходимо добывают пищу, чтобы прокормить свои большие выводки.</p>
+        <h2>Западноамериканская совка</h2>      
+<img
+src="https://4tololo.ru/files/images/20152002193945.jpg"
+alt="Западноамериканская совка"        
+title="Западноамериканская совка">        
+<p>Среда обитания: летом на юго-западе Канады, по всей территории запада США, и в Мексике, куда они улетают на зимовку
+
+Название данного вида звучит как "psiloscops flammeolus", и в переводе с латыни означает "огненно-оранжевый", что является описанием их уникальной окраски. 
+Совка любит охотиться на ночных насекомых и пауков, которых она ловит в воздухе или среди листвы.</p>        
+        </body>   
