--- a/index_plus.html
+++ b/index_plus.html
@@ -10,7 +10,7 @@
 <img 
 src="https://4tololo.ru/files/images/20152002193938.jpg"
 alt="Западная малая ушастая сова"
-title="Западная малая ушастая сова" width="500" height="500">
+title="Западная малая ушастая сова">
 <p>Среда обитания: от Юго-Восточной Аляски до западной Канады и от западной части США до центральной Мексики
 
 Эти совы целенаправленно приносят маленьких слепых змей, похожих на больших земляных червей, в гнездо, чтобы они защищали его от насекомых. 
@@ -41,5 +41,23 @@ title="Западноамериканская совка">
 <p>Среда обитания: летом на юго-западе Канады, по всей территории запада США, и в Мексике, куда они улетают на зимовку
 
 Название данного вида звучит как "psiloscops flammeolus", и в переводе с латыни означает "огненно-оранжевый", что является описанием их уникальной окраски. 
-Совка любит охотиться на ночных насекомых и пауков, которых она ловит в воздухе или среди листвы.</p>        
-        </body>   
+Совка любит охотиться на ночных насекомых и пауков, которых она ловит в воздухе или среди листвы.</p>
+        <h2>Виргинский филин (большая рогатая сова)</h2>
+<img
+src="https://4tololo.ru/files/images/20152002193947.jpg"     
+alt="Виргинский филин"
+title="Виргинский филин">
+<p>Среда обитания: по всему континенту Северной Америки и по большей части Южной
+
+Как и другие совы, большая рогатая сова ест свою добычу вместе с мехом, перьями, костями, мясом и внутренними органами. 
+Также это единственный хищник, который способен охотиться на скунсовых.</p>
+        <h2>Североамериканская совка</h2>
+<img
+src="https://4tololo.ru/files/images/20152002193955.jpg"
+alt="Североамериканская совка"
+title="Североамериканская совка">
+<p>Среда обитания: к востоку от североамериканских Скалистых гор и на северо-востоке Мексики
+
+Также эти совы известны как визжащие, но ушастые птицы используют свои возможности, чтобы издавать звуки похожие на тихое ржание или мягкую трель.</p>        
+</body> 
+       
