--- a/index_plus.html
+++ b/index_plus.html
@@ -5,7 +5,7 @@
         <title>Совы!</title>
 </head>
 <body>
-        <div class="block-el"><h1><u>Виды сов!!!</u></h1></div>
+       <h1><u>Виды сов!!!</u></h1>
         <h2>Западная малая ушастая сова</h2>
 <img 
 src="https://4tololo.ru/files/images/20152002193938.jpg"
