--- a/index_minus.html
+++ b/index_minus.html
@@ -1,2 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>Топовые мобильные игры!!<title>
+    </head>
+    <body>
+      <h1>Первое место:</h1>
+  <h2><a
+         href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
+<p>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями. 
+  Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</p>
+      
