--- a/index_minus.html
+++ b/index_minus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Топовые мобильные игры!!<title>
+  <title>Топовые мобильные игры!!</title>
     </head>
     <body>
       <h1>Первое место:</h1>
