--- a/index_minus.html
+++ b/index_minus.html
@@ -9,6 +9,7 @@
    <h2><a
          href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
 <img
+align="left"
 src="https://cheat-off.com/uploads/posts/2017-07/1498999391_brawl-stars.jpg"
 alt="Brawl Stars"
 title="Brawl Stars" width="150" height="150">
