--- a/index_minus.html
+++ b/index_minus.html
@@ -9,10 +9,9 @@
    <h2><a
          href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
 <img
-align="left"
 src="https://cheat-off.com/uploads/posts/2017-07/1498999391_brawl-stars.jpg"
 alt="Brawl Stars"
 title="Brawl Stars" width="150" height="150">
-<p>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями. 
+<p align="right">Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями. 
   Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</p>
       
