--- a/index_minus.html
+++ b/index_minus.html
@@ -5,12 +5,21 @@
   <title>Топовые мобильные игры!!</title>
     </head>
     <body>
-      <h1>Первое место:</h1>
+      <h1>Первое место:<h1>
    <h2><a
          href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
 <img
 src="https://cheat-off.com/uploads/posts/2017-07/1498999391_brawl-stars.jpg"
 alt="Brawl Stars"
 title="Brawl Stars" width="150" height="150">
-<p>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями.
-Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</p>     
+<p><b>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями.
+Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</b></p>     
+        <h1>Второе место:</h1>
+        <h2><a 
+               href="https://app-time.ru/games/shadow-fight-3">Shadow Fight 3</a></h2>
+<img
+src="https://app-time.ru/uploads/games/cover/2017/11/16112017181039.jpg"
+alt="Shadow Fight 3"
+title="Shadow Fight 3" width="150" height="150">
+<p><b>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. 
+В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</b></p>
