--- a/index_minus.html
+++ b/index_minus.html
@@ -21,5 +21,7 @@ title="Brawl Stars" width="150" height="150">
 src="https://app-time.ru/uploads/games/cover/2017/11/16112017181039.jpg"
 alt="Shadow Fight 3"
 title="Shadow Fight 3" width="150" height="150">
+<video aling=right>
+  source src="https://youtu.be/bV90ZStmRNc"</video>
 <p><b>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. 
 В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</b></p>
