--- a/index_minus.html
+++ b/index_minus.html
@@ -9,11 +9,12 @@
    <h2><a
          href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
 <img
-src="https://cheat-off.com/uploads/posts/2017-07/1498999391_brawl-stars.jpg"
+src="https://app-time.ru/uploads/games/cover/2018/06/26062018120950.jpg"
 alt="Brawl Stars"
 title="Brawl Stars" width="150" height="150">
 <p><b>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями.
-Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</b></p>     
+Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</b></p>
+<iframe width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Второе место:</h1>
         <h2><a 
                href="https://app-time.ru/games/shadow-fight-3">Shadow Fight 3</a></h2>
@@ -23,4 +24,14 @@ alt="Shadow Fight 3"
 title="Shadow Fight 3" width="150" height="150">
 <p><b>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. 
 В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><
+<iframe width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Третье место:</h1>
+        <h2><a
+               href="https://app-time.ru/games/standoff-2">Stand off 2</a>
+<img
+src="https://app-time.ru/uploads/games/cover/2018/10/0910201814031080.jpg"
+alt="Stand off 2"
+title="Stand off 2" width="150" height="150">
+<p><b>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! 
+  Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</b></p>
+<iframe width="400" height="300" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
