--- a/index_minus.html
+++ b/index_minus.html
@@ -30,6 +30,7 @@ title="Shadow Fight 3" width="150" height="150">
                href="https://app-time.ru/games/standoff-2">Stand off 2</a>
 <img
 src="https://app-time.ru/uploads/games/cover/2018/10/0910201814031080.jpg"
+aling="left"
 alt="Stand off 2"
 title="Stand off 2" width="150" height="150">
 <p><b>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! 
