--- a/index_minus.html
+++ b/index_minus.html
@@ -27,7 +27,7 @@ title="Shadow Fight 3" width="150" height="150">
 <iframe width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Третье место:</h1>
         <h2><a
-               href="https://app-time.ru/games/standoff-2">Stand off 2</a>
+               href="https://app-time.ru/games/standoff-2">Stand off 2</a></h2>
 <img
 src="https://app-time.ru/uploads/games/cover/2018/10/0910201814031080.jpg"
 aling="left"
