--- a/Brawl_Stars.html
+++ b/Brawl_Stars.html
@@ -6,11 +6,8 @@
 </head>
 <body>
 <h1>Brawl Stars</h1>
-<style>
-   p {
-    border: 1px solid red;
-    padding: 10px;
-   }
-  </style>
+<img
+src="https://app-time.ru/uploads/games/cover/2018/06/26062018120950.jpg" width="150" height="150">
+<iframe width="1252" height="704" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a
 href="https://play.google.com/store/apps/details?id=com.supercell.brawlstars">Скачать Brawl Stars</a>
