--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     <img
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSstnGjzf1ZcfCUgUyhLnGHKjajWi9XbbvF-UjCRp2xUJxbogBE8Q&s">
+    src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
     <h1><a
     href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3</a></h1>
 <img
