--- a/index_minus.html
+++ b/index_minus.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Топовые мобильные игры!!</title>
+  <title>Топ 10 мобильных игр!!</title>
     </head>
     <body>
       <h1>Первое место:<h1>
    <h2><a
-         href="https://app-time.ru/games/brawl-stars">Brawl Stars</a></h2>
+         href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
 <img
 src="https://app-time.ru/uploads/games/cover/2018/06/26062018120950.jpg"
 alt="Brawl Stars"
@@ -17,7 +17,7 @@ title="Brawl Stars" width="150" height="150">
 <iframe width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Второе место:</h1>
         <h2><a 
-               href="https://app-time.ru/games/shadow-fight-3">Shadow Fight 3</a></h2>
+               href="https://vlad-hunter6345.github.io/Shadow_Fight_3.html">Shadow Fight 3</a></h2>
 <img
 src="https://app-time.ru/uploads/games/cover/2017/11/16112017181039.jpg" aling="left"
 alt="Shadow Fight 3"
@@ -27,7 +27,7 @@ title="Shadow Fight 3" width="150" height="150">
 <iframe width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Третье место:</h1>
         <h2><a
-               href="https://app-time.ru/games/standoff-2">Stand off 2</a></h2>
+               href="https://vlad-hunter6345.github.io/Stand_Off_2.html">Stand off 2</a></h2>
 <img
 src="https://app-time.ru/uploads/games/cover/2018/10/0910201814031080.jpg"
 aling="left"
