--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -8,7 +8,9 @@
     <img
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
     <h1><a
-    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3</a></h1>
+    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Андроид</a>
+<a
+   href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1>
 <img
 src="https://pbs.twimg.com/profile_images/1110191110553587714/i5uu1Mu2.png" width="150" height="150">
 <p>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</p>
