--- a/Stand_Off_2.html
+++ b/Stand_Off_2.html
@@ -8,7 +8,9 @@
     <img
     src="https://mobimg.b-cdn.net/androidgame_img/standoff_2/real/1_standoff_2.jpg">
     <h1><a
-    href="https://play.google.com/store/apps/details?id=com.axlebolt.standoff2">Скачать Stand Off 2</a></h1>
+    href="https://play.google.com/store/apps/details?id=com.axlebolt.standoff2">Скачать Stand Off 2 Андроид</a>
+<a
+   href="https://apps.apple.com/ru/app/id1359706682">Скачать Stand Off 2 IOS</a></h1>
 <img
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJT2FbZQuEyoR4IADdBgJMWHx5TgFqEbimZKMQU4M9BbrIaPxx&s" width="150" height="150">
 <p>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</p>
