--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -8,7 +8,7 @@
     <img
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
     <h1><a
-    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Андроид</a>
+    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Андроид/</a>
 <a
    href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1>
 <img
