--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -8,8 +8,8 @@
     <img
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
     <h1><a
-    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Андроид/</a>
-<a
+    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Андроид/</a></h1>
+<h1><a
    href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1>
 <img
 src="https://pbs.twimg.com/profile_images/1110191110553587714/i5uu1Mu2.png" width="150" height="150">
