--- a/Stand_Off_2.html
+++ b/Stand_Off_2.html
@@ -15,4 +15,5 @@
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJT2FbZQuEyoR4IADdBgJMWHx5TgFqEbimZKMQU4M9BbrIaPxx&s" width="150" height="150">
 <p>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</p>
 <iframe width="1252" height="704" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+  </body>
+</html>
