--- a/index_minus.html
+++ b/index_minus.html
@@ -38,7 +38,7 @@ title="Stand off 2" width="150" height="150">
 <iframe width="400" height="300" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Четвертое место:</h1>
 <h2><a
-       href="https://vlad-hunter6345.github.io/Fortnite.html">Fortnite</a>
+       href="https://vlad-hunter6345.github.io/Fortnite.html">Fortnite</a></h2>
 <img
  src="https://cdn-www.bluestacks.com/bs-images/300x300bb.png"
  aling="left" 
