--- a/index_minus.html
+++ b/index_minus.html
@@ -45,7 +45,7 @@ title="Stand off 2" width="150" height="150">
  alt="Fortnite"
  title="Fortnite" width="150" height="150">
 <p><b>Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). Геймплей заключается в сборе лута и перестрелках. Однако важной особенностью именно этой игры является строительство. Игроки могут рубить деревья, разрушать здания, забирая соответствующий ресурс — дерево, камень или металл — а затем использовать их для сооружения построек.</b></p>
- <iframe width="1252" height="704" src="https://www.youtube.com/embed/lOA2ATSrK08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="1252" height="704" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
 
         
