--- a/Call_of_Duty_Mobile.html
+++ b/Call_of_Duty_Mobile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Call off Duty Mobile</title>
+<title>Call of Duty Mobile</title>
 </head>
 <body>
 <img
