--- a/Call_of_Duty_Mobile.html
+++ b/Call_of_Duty_Mobile.html
@@ -10,7 +10,7 @@ src="https://3dnews.ru/assets/external/illustrations/2019/10/04/995111/sm.sm.155
 <h1><a
 href="https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter">Скачать Call of Duty Mobile Android</a></h1>
 <h1><a
-href="https://apps.apple.com/ru/app/id1287282214">Скачать Call of Duty Mobile IOS</a>
+       href="https://apps.apple.com/ru/app/id1287282214">Скачать Call of Duty Mobile IOS</a></h1>
 <img
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
 <p>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</p>
