--- a/index_minus.html
+++ b/index_minus.html
@@ -6,10 +6,12 @@
     </head>
     <body>
       <h1>Первое место:<h1>
+   <style>
    .body{
         background-image:#c7b39b url(images/bg.jpg)
         img=https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg
         }
+     </style>
    <h2><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
 <img
