--- a/index_minus.html
+++ b/index_minus.html
@@ -8,7 +8,9 @@
       <h1>Первое место:<h1>
    <style>
    .body{
-        background-image:https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg
+        body {
+    background: #c7b39b url(images/bg.jpg); 
+          color: yello;
         }
      </style>
    <h2><a
