--- a/index_minus.html
+++ b/index_minus.html
@@ -5,9 +5,8 @@
   <title>Топ 5 мобильных игр!!!</title>
   <style>
    .body{
-        body {
-    background: #c7b39b url(images/bg.jpg); 
-          color: yello;
+     background-image: url(images/bg.jpg);
+     background-color: #FFFF00;
         }
      </style>
     </head>
