--- a/index_minus.html
+++ b/index_minus.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
   <style>
-   .body{
-     background-image: url(images/bg.jpg);
-     background-color: #FFFF00;
-        }
-     </style>
+   body {
+    background: #c7b39b url(images/bg.jpg); 
+    color: #ffff00;
+   }
+  </style>
     </head>
     <body>
       <h1>Первое место:<h1>
