--- a/index_minus.html
+++ b/index_minus.html
@@ -11,7 +11,7 @@
   </style>
     </head>
     <body>
-      <h1>Первое место:<h1>
+      <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
 <img
