--- a/index_minus.html
+++ b/index_minus.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
-  <style>
-   body {
-    background: #c7b39b url(images/bg.jpg); 
-    color: #ffff00;
+<style type="text/css">
+   div {
+    height: 200px; 
+    width: 200px; 
+    overflow: auto; 
+    padding-left: 15px; 
+    background: url(images/hand.png) repeat-y #fc0; 
    }
-  </style>
+  </style> 
     </head>
     <body>
       <div>
