--- a/index_minus.html
+++ b/index_minus.html
@@ -10,6 +10,7 @@
   </style> 
     </head>
     <body>
+      <div>
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
@@ -57,8 +58,9 @@ title="Stand off 2" width="150" height="150">
 <img
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
 <p><b>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</b></p>
-<iframe width="1252" height="704" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </body>
+<iframe width="1252" height="704" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe
+  </div>
+  </body>
         </html>
         
         
