--- a/index_minus.html
+++ b/index_minus.html
@@ -12,53 +12,53 @@
     <body>
       <div style="margin: 0px 500px">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
-   <h2><a
+   <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
-<img
+<img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/06/26062018120950.jpg"
 alt="Brawl Stars"
 title="Brawl Stars" width="150" height="150">
-<p><b>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями.
+<p style="margin: 0px 120px;"><b>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями.
 Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h1>Второе место:</h1>
-        <h2><a 
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 style="margin: 0px 120px;">Второе место:</h1>
+        <h2 style="margin: 0px 120px;"><a 
                href="https://vlad-hunter6345.github.io/Shadow_Fight_3.html">Shadow Fight 3</a></h2>
-<img
+<img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2017/11/16112017181039.jpg" aling="left"
 alt="Shadow Fight 3"
 title="Shadow Fight 3" width="150" height="150">
-<p><b>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. 
+<p style="margin: 0px 120px;"><b>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. 
 В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h1>Третье место:</h1>
-        <h2><a
+<iframe style="margin: 0px 120px;"  width="400" height="300" src="https://www.youtube.com/embed/bV90ZStmRNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 style="margin: 0px 120px;">Третье место:</h1>
+        <h2 style="margin: 0px 120px;"><a
                href="https://vlad-hunter6345.github.io/Stand_Off_2.html">Stand off 2</a></h2>
-<img
+<img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/10/0910201814031080.jpg"
 aling="left"
 alt="Stand off 2"
 title="Stand off 2" width="150" height="150">
-<p><b>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! 
+<p style="margin: 0px 120px;"><b>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! 
   Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h1>Четвертое место:</h1>
-<h2><a
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 style="margin: 0px 120px;">Четвертое место:</h1>
+<h2 style="margin: 0px 120px;"><a
        href="https://vlad-hunter6345.github.io/Fortnite.html">Fortnite</a></h2>
-<img
+<img style="margin: 0px 120px;"
  src="https://cdn-www.bluestacks.com/bs-images/300x300bb.png"
  aling="left" 
  alt="Fortnite"
  title="Fortnite" width="150" height="150">
-<p><b>Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). Геймплей заключается в сборе лута и перестрелках. Однако важной особенностью именно этой игры является строительство. Игроки могут рубить деревья, разрушать здания, забирая соответствующий ресурс — дерево, камень или металл — а затем использовать их для сооружения построек.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h1>Пятое место:</h1>
-<h2><a
+<p style="margin: 0px 120px;"><b>Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). Геймплей заключается в сборе лута и перестрелках. Однако важной особенностью именно этой игры является строительство. Игроки могут рубить деревья, разрушать здания, забирая соответствующий ресурс — дерево, камень или металл — а затем использовать их для сооружения построек.</b></p>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 style="margin: 0px 120px;">Пятое место:</h1>
+<h2 style="margin: 0px 120px;"><a
        href="https://vlad-hunter6345.github.io/Call_of_Duty_Mobile">Call of Duty Mobile</a></h2>
-<img
+<img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
-<p><b>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe
+<p style="margin: 0px 120px;"><b>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</b></p>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe
   </div>
   </body>
         </html>
