--- a/index_minus.html
+++ b/index_minus.html
@@ -7,7 +7,15 @@
    div {
   background: url(images/hand.png) repeat-y #fc0; 
    }
-  </style> 
+  </style>
+    <style> 
+    body {
+    background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg);
+    background-repeat: repeat-y, repeat-y;
+    background-position: left, right;
+    background-attachment: fixed, fixed;
+   }
+    </style>
     </head>
     <body>
       <div style="margin: 0px 500px">
