--- a/index_minus.html
+++ b/index_minus.html
@@ -10,10 +10,8 @@
   </style>
     <style> 
     body {
-    background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg);
-    background-repeat: repeat-y, repeat-y;
-    background-position: left, right;
-    background-attachment: fixed, fixed;
+    background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
+    background-attachment: fixed; 
    }
     </style>
     </head>
