--- a/index_minus.html
+++ b/index_minus.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
+  <style type="text/css">
+   div {
+    height: 200px; 
+    width: 200px; 
+    overflow: auto; 
+    padding-left: 15px; 
+    background: url(images/hand.png) repeat-y #fc0; 
+   }
+  </style>
     <style> 
     body {
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
