--- a/index_minus.html
+++ b/index_minus.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
   <style type="text/css">
-   div {
-    height: 200px; 
-    width: 200px; 
-    overflow: auto; 
-    padding-left: 15px; 
+   div { 
     background: url(images/hand.png) repeat-y #fc0; 
    }
   </style>
@@ -20,7 +16,7 @@
     </style>
     </head>
     <body>
-      <div style="margin: 0px 500px; color: yellow">
+      <div style="margin: 0px 500px;">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
