--- a/Brawl_Stars.html
+++ b/Brawl_Stars.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Brawl Stars</title>
+  <style type="text/css">
+   div {
+  background:#66CDAA;
+   }
+  </style>
 </head>
 <body>
 <img
