--- a/Brawl_Stars.html
+++ b/Brawl_Stars.html
@@ -5,7 +5,7 @@
 <title>Brawl Stars</title>
   <style type="text/css">
    div {
-  background:#66CDAA;
+  background: url(images/hand.png) repeat-y#66CDAA;
    }
   </style>
 </head>
