--- a/Brawl_Stars.html
+++ b/Brawl_Stars.html
@@ -8,6 +8,12 @@
   background: url(images/hand.png) repeat-y #66CDAA;
    }
   </style>
+  <style> 
+    body {
+    background-image: url(https://mobimg.b-cdn.net/iphonegame_img/brawl_stars/real/1_brawl_stars.jpg); 
+    background-attachment: fixed; 
+   }
+    </style>
 </head>
 <body>
   <div style="margin: 0px 500px;">
