--- a/index_minus.html
+++ b/index_minus.html
@@ -3,20 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
-  <style type="text/css">
-   div { 
-    background: url(images/hand.png) repeat-y #fc0; 
-   }
-  </style>
-    <style> 
-    body {
-    background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
-    background-attachment: fixed; 
-   }
-    </style>
-    </head>
-    <body>
-      <div style="margin: 0px 500px;">
+  <link rel="stylesheet" href="style.css"> 
+ </head>
+    <body class="body">
+      <div class="div" style="margin: 0px 500px;">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
