--- a/index_minus.html
+++ b/index_minus.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
  <style>
-   .div { 
+   div { 
     background: url(images/hand.png) repeat-y #fc0; 
    }
   </style>
 <style>
-    .body {
+    body {
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
     background-attachment: fixed; 
    }
