--- a/index_minus.html
+++ b/index_minus.html
@@ -16,7 +16,7 @@
   </style>
  </head>
     <body>
-      <div>
+      <div style="margin: 0px 500px">
       <h1>Первое место:<h1>
    <h2><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
