--- a/Brawl_Stars.html
+++ b/Brawl_Stars.html
@@ -26,7 +26,7 @@ href="https://play.google.com/store/apps/details?id=com.supercell.brawlstars">С
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/06/26062018120950.jpg" width="150" height="150">
 <p>Это 3-v-3 стратегия в реальном времени, в которой вы можете, как играть в онлайне с другими игроками, так и со своими друзьями. Внутри вас ждут десятки сумасшедших персонажей с персональными супер способностями и четыре разных режима игры.</p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/eAvGzKMwXmw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </body>
 </html>
