--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -3,17 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Shadow fight 3</title>
+  <style type="text/css">
+   div {
+  background: url(images/hand.png) repeat-y #66CDAA;
+   }
+  </style>
+  <style>
+  body {
+    background-image: url(https://cdnb.artstation.com/p/assets/images/images/017/252/337/large/broken-wang-403-shodow-1-1.jpg?1555245552); 
+    background-attachment: fixed; 
+   }
     </head>
-    <body>
-    <img
+    <body class="body">
+      <div style="margin: 0px 400px" class="div">
+    <img style="margin: 0px 120px;"
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
-    <h1><a
+    <h1 style="margin: 0px 120px;"><a
     href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Android</a></h1>
-<h1><a
+<h1 style="margin: 0px 120px;"><a
    href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1>
-<img
+<img style="margin: 0px 120px;"
 src="https://pbs.twimg.com/profile_images/1110191110553587714/i5uu1Mu2.png" width="150" height="150">
-<p>Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</p>
-<iframe width="1252" height="704" src="https://www.youtube.com/embed/B6Mn0mkOlRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p style="margin: 0px 120px;">Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</p>
+<iframe style="margin: 0px 120px;" width="1252" height="704" src="https://www.youtube.com/embed/B6Mn0mkOlRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
   </body>
 </html>
