--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -10,7 +10,7 @@
   </style>
   <style>
   body {
-    background-image: url(https://cdnb.artstation.com/p/assets/images/images/017/252/337/large/broken-wang-403-shodow-1-1.jpg?1555245552); 
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLN6mWQXUc-7dc6oiqbB4MG8W8TyWRvt74epdCx3_JhrWdQmdAqA&s); 
     background-attachment: fixed; 
    }
     </head>
