--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -14,7 +14,7 @@
     background-attachment: fixed; 
    }
     </head>
-    <body class="body">
+    <body>
       <div style="margin: 0px 400px" class="div">
     <img style="margin: 0px 120px;"
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
