--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -13,6 +13,7 @@
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLN6mWQXUc-7dc6oiqbB4MG8W8TyWRvt74epdCx3_JhrWdQmdAqA&s); 
     background-attachment: fixed; 
    }
+  </style>
     </head>
     <body>
   <div style="margin: 0px 400px;">
