--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -18,7 +18,7 @@
     <body>
   <div style="margin: 0px 400px;">
     <img style="margin: 0px 120px;"
-    src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg">
+    src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg" height="150">
     <h1 style="margin: 0px 120px;"><a
     href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Android</a></h1>
 <h1 style="margin: 0px 120px;"><a
