--- a/Stand_Off_2.html
+++ b/Stand_Off_2.html
@@ -3,17 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Stand Off 2</title>
+  <style type="text/css">
+   div {
+  background: url(images/hand.png) repeat-y #66CDAA;
+   }
+  </style>
+  <style>
+  body {
+    background-image: url(https://pdacdn.com/app/59522d39944bf/m_img1.jpg); 
+    background-attachment: fixed; 
+   }
+  </style>
     </head>
     <body>
-    <img
-    src="https://mobimg.b-cdn.net/androidgame_img/standoff_2/real/1_standoff_2.jpg">
-    <h1><a
+      <div style="margin: 0px 400px">
+    <img style="margin: 0px 120px;"
+    src="https://mobimg.b-cdn.net/androidgame_img/standoff_2/real/1_standoff_2.jpg" height="150">
+    <h1 style="margin: 0px 120px;"><a
     href="https://play.google.com/store/apps/details?id=com.axlebolt.standoff2">Скачать Stand Off 2 Android</a></h1>
-<h1><a
+<h1 style="margin: 0px 120px;"><a
    href="https://apps.apple.com/ru/app/id1359706682">Скачать Stand Off 2 IOS</a></h1>
-<img
+<img style="margin: 0px 120px;"
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJT2FbZQuEyoR4IADdBgJMWHx5TgFqEbimZKMQU4M9BbrIaPxx&s" width="150" height="150">
-<p>Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</p>
-<iframe width="1252" height="704" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p style="margin: 0px 120px;">Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</p>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/eLrxESSgboU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
   </body>
 </html>
