--- a/Fortnite.html
+++ b/Fortnite.html
@@ -3,16 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Fortnite</title>
+  <style type="text/css">
+   div {
+  background: url(images/hand.png) repeat-y #66CDAA;
+   }
+  </style>
+  <style> 
+    body {
+    background-image: url(https://mobimg.b-cdn.net/iphonegame_img/brawl_stars/real/1_brawl_stars.jpg); 
+    background-attachment: fixed; 
+   }
+    </style>
     </head>
     <body>
-    <img
-    src="https://cdn2.unrealengine.com/Fortnite%2Flanding-pages%2Fseason-x%2Fheader%2F10BR_Announce_KeyArt_Social-1920x1080-c3c43cfe6a4cf97004f4cfcd5e38d843667168c1.jpg">
-   <h1><a
+      <div style="margin: 0px 400px">
+    <img style="margin: 0px 120px;"
+    src="https://cdn2.unrealengine.com/Fortnite%2Flanding-pages%2Fseason-x%2Fheader%2F10BR_Announce_KeyArt_Social-1920x1080-c3c43cfe6a4cf97004f4cfcd5e38d843667168c1.jpg" height="150">
+   <h1 style="margin: 0px 120px;"><a
    href="https://apps.apple.com/ru/app/id1261357853">Скачать Fortnite IOS</a></h1>
-   <img
+   <img style="margin: 0px 120px;"
    src="https://cdn-www.bluestacks.com/bs-images/300x300bb.png" width="150" height="150">
-   <p>Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). 
+   <p style="margin: 0px 120px;">Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). 
    Геймплей заключается в сборе лута и перестрелках. Однако важной особенностью именно этой игры является строительство. Игроки могут рубить деревья, разрушать здания, забирая соответствующий ресурс — дерево, камень или металл — а затем использовать их для сооружения построек.</p>
-<iframe width="1252" height="704" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
  </body>
  </html>    
