--- a/index_minus.html
+++ b/index_minus.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
+  <h1 id="logo">
+  <a href="#"><img src="site/logo.png" alt="The Baker Street Inquirer"/></a>
+</h1>
  <style>
    div { 
     background: url(images/hand.png) repeat-y #fc0; 
