--- a/index_minus.html
+++ b/index_minus.html
@@ -3,9 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Топ 5 мобильных игр!!!</title>
-  <h1 id="logo">
-  <a href="#"><img src="site/logo.png" alt="The Baker Street Inquirer"/></a>
-</h1>
  <style>
    div { 
     background: url(images/hand.png) repeat-y #fc0; 
@@ -16,6 +13,17 @@
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
     background-attachment: fixed; 
    }
+  </style>
+  <style>
+    leftcolumn {
+width: 27%; /* 270px / 1000px = 0,27 */
+float: left;
+}
+ 
+rightcolumn {
+width: 73%; /* 730px / 1000px = 0,73 */
+float: right;
+}
   </style>
   </head>
     <body>
