--- a/index_minus.html
+++ b/index_minus.html
@@ -25,6 +25,12 @@ width: 73%; /* 730px / 1000px = 0,73 */
 float: right;
 }
   </style>
+  <style>
+    leftcolumn .some-div {
+width: 62,962963%; /* 170px / 270px = 0.62962963 */
+float: left;
+}
+  </style>
   </head>
     <body>
       <div style="margin: 0px 500px">
