--- a/index_minus.html
+++ b/index_minus.html
@@ -31,7 +31,15 @@ width: 62,962963%; /* 170px / 270px = 0.62962963 */
 float: left;
 }
   </style>
-  </head>
+  <style>
+    @media only screen and (min-width: 480px) {
+    }
+  </style>
+  <style>
+    @media only screen and (min-width: 768px) {
+    }
+  </style>
+    </head>
     <body>
       <div style="margin: 0px 500px">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
