--- a/index_minus.html
+++ b/index_minus.html
@@ -8,6 +8,13 @@
     background: url(images/hand.png) repeat-y #fc0; 
    }
   </style>
+  <style>
+    div {
+      width: 100%;
+      text-aling: center;
+    height: auto;
+    }
+  </style>
 <style>
     body {
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
