--- a/index_minus.html
+++ b/index_minus.html
@@ -8,12 +8,6 @@
     background: url(images/hand.png) repeat-y #fc0; 
    }
   </style>
-  <style>
-    div {
-      width: 100%;
-      text-aling: center;
-    }
-  </style>
 <style>
     body {
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
@@ -44,6 +38,9 @@ float: left;
   <style>
     @media only screen and (min-width: 768px) {
     }
+  </style>
+  <style>
+    @media only screen and (max-width: 767px) {   body { 
   </style>
     </head>
     <body>
