--- a/index_minus.html
+++ b/index_minus.html
@@ -42,6 +42,7 @@ float: left;
   <style>
     @media only screen and (max-width: 767px) {   body { 
   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
       <div style="margin: 0px 500px">
