--- a/index_minus.html
+++ b/index_minus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content=" width: 2560px 1440px;, initial-scale=1.0" />
   <title>Топ 5 мобильных игр!!!</title>
  <style>
    div { 
