--- a/index_minus.html
+++ b/index_minus.html
@@ -9,6 +9,15 @@
     background: url(images/hand.png) repeat-y #fc0; 
    }
   </style>
+  <style>
+    html { 
+        background: url(images/bg.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+  </style>
 <style>
     body {
     background-image: url(https://thequestion.s3.eu-central-1.amazonaws.com/043/227689-a36119fd.jpeg); 
